# deploy_insper

./: .dockerignore  .gitignore  Dockerfile  README.md  dashboard-entrypoint.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  seed-data.sh
conf/: README.md  logging.yml
conf/base/: catalog.yml
data/01_raw/: diabetes-dataset-inference.csv  diabetes-dataset-modelling.csv
data/02_intermediate/: capped_data.parquet  capped_inference.parquet  cleaned_data.parquet  cleaned_inference.parquet  featured_data.parquet  featured_inference.parquet  imputed_data.parquet  imputed_inference.parquet
data/03_primary/: encoded_data.parquet  encoded_inference.parquet  production_capped_data.parquet  production_encoded_data.parquet  production_featured_data.parquet  production_imputed_data.parquet  split_data.parquet
data/04_feature/: master_table.parquet  production_master_table.parquet  scaled_inference.parquet
data/06_models/: baseline_model.pkl  imputers.pkl  optimized_model.pkl  outlier_cappers.pkl  production_encoders.pkl  production_imputers.pkl  production_model.pkl  production_outlier_cappers.pkl  production_scalers.pkl  raw_production_model.pkl  scalers.pkl  xgboost_model.pkl
data/07_model_output/: baseline_metrics.pkl  best_model_config.pkl  bootstrap_metric_intervals.parquet  cv_fold_metrics.parquet  cv_metric_summary.parquet  feature_selection_frontier.parquet  feature_selection_manifest.json  feature_selection_stability.parquet  model_frontier.parquet  model_selection_scorecard.parquet  modelling_design_audit.parquet  nested_cv_audit.parquet  optimized_metrics.pkl  permutation_feature_importance.parquet  perturbation_sensitivity_audit.parquet  perturbation_sensitivity_summary.parquet  predictions.parquet  risk_report.parquet  selected_deployment_policy.pkl  selected_feature_columns.pkl  split_comparison_report.parquet  test_report.pkl  threshold_metrics.parquet  xgboost_metrics.pkl
data/09_ops/: data_contract_report.parquet  data_drift_report.parquet  data_freshness_report.parquet  latest_experiment_run.pkl  latest_inference_contract.json  latest_model_registry_entry.pkl  latest_serving_manifest.json  latest_training_run_manifest.json  ops.sqlite3  split_strategy_report.parquet
docs/source/: conf.py  index.rst
src/: sitecustomize.py
src/insper_deploy_kedro/: __init__.py  __main__.py  api.py  class_loading.py  cli.py  constants.py  dashboard.py  logging_utils.py  (+5 more)
tests/: conftest.py  test_api.py  test_clean_data_hf.py  test_dashboard.py  test_dependency_compatibility.py  test_nodes_data_engineering.py  test_nodes_inference.py  test_nodes_modelling.py  test_observability.py  test_ops_store.py  test_registry.py  test_run.py  test_serving_runtime.py
(+21 files in other folders)
