[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.13"
name = "insper_deploy_kedro"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "kedro[jupyter]~=1.2.0",
    "kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset, plotly-plotlydataset, plotly-jsondataset, matplotlib-matplotlibdataset, pickle-pickledataset]>=9.1",
    "kedro-viz>=6.7.0",
    "scikit-learn~=1.5.1",
    "catboost>=1.2",
    "xgboost>=2.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "pyyaml>=6.0",
    "optuna>=3.0",
    "streamlit>=1.30",
    "matplotlib>=3.7",
    "great-expectations>=1.0",
    "marshmallow>=3.7.1,<3.24",
]

[project.scripts]
"insper-deploy-kedro" = "insper_deploy_kedro.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils<0.21",
    "sphinx>=5.3,<7.3",
    "sphinx_rtd_theme==2.0.0",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.20.2",
    "sphinx_copybutton==0.5.2",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.2.0",
    "myst-parser>=1.0,<2.1"
]
dev = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "seaborn~=0.12.1",
    "pytest-cov>=3,<7",
    "pytest-mock>=3.10",
    "pytest>=8.0",
    "ruff~=0.12.0",
    "httpx>=0.24",
    "datasets>=2.0",
]

[tool.setuptools]
py-modules = ["sitecustomize"]

[tool.setuptools.dynamic]
version = {attr = "insper_deploy_kedro.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "insper_deploy_kedro"
project_name = "insper-deploy-kedro"
kedro_init_version = "1.2.0"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure', 'PySpark']"
example_pipeline = "False"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/insper_deploy_kedro -ra"""

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Ruff format takes care of line-too-long

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "PLC0415", "E402", "PLR0913"]
"src/insper_deploy_kedro/settings.py" = ["E402"]

[tool.kedro_telemetry]
project_id = "cae58a8dd37748ddad7287703b474f18"
